<resources>
    <string name="hello">Hello World, MainList!</string>
    <string name="app_name">CIT</string>
    <string name="pass">"Pass"</string>
    <string name="fail">"Fail"</string>
    <string name="calibrating">"Calibrating..."</string>
    <string name="pcb">PCBA</string>
    <string name="complete">Complete</string>
    <string name="subpcb">SUBPCB</string>
    <string name="title_pcba_auto">PCBA_auto_test</string>
    <string name="title_complete_auto">Complete_auto_test</string>
    <string name="title_pcba_sensorAuto">PCBA_sensor_auto_test</string>
    <string name="title_complete_sensorAuto">Complete_sensor_auto_test</string>
    <string name="title_WBGauto">WBG_auto_test</string>
    <string name="test_info_1">Above</string>
    <string name="test_info_2">of all tests pass.</string>
    <string name="clear_data">清除数据</string>
    <string name="notice">清除数据后，请等待机器重启，在此之间请不要做任何操作。重启后，请确认进入开机向导！</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_title">CITTest</string>
    <string name="alert_content">Are you sure to exit the test？</string>
    <string name="sim_status_0"> Unknown</string>
    <string name="sim_status_1"> no SIM/UIM card is available in the device</string>
    <string name="sim_status_2"> Locked: requires the users SIM/UIM PIN to unlock</string>
    <string name="sim_status_3"> Locked: requires the users SIM/UIM PUK to unlock</string>
    <string name="sim_status_4"> Locked: requires a network PIN to unlock</string>
    <string name="sim_status_5"> Ready</string>
    <string name="sim_status_6">SIM1 and SIM2 are ready</string>
    <string name="sd_card_space">"SD card content"</string>
    <string name="sd_card_space1">"SD card space available"</string>
    <string name="colligate_illustration">Adjust the volume by keypad</string>
    <string name="wlan_data_rate">Data Rate</string>
    <string name="wlan_channel">Channel</string>
    <string name="wlan_equ_type">device type</string>
    <string name="wlan_TotalPacket">total package</string>
    <string name="wlan_wl">"WL"</string>
    <string name="wlan_tx_start">Start</string>
    <string name="wlan_tx_close">Stop</string>
    <string name="wlan_tx_clear">Clear</string>
    <string name="wlan_setmode_error">"Set Wifi Cit test mode failed!"</string>
    <string name="wlan_translate_error">"please input integer number"</string>
    <string name="wlan_data_rate_error">"data_rate between 0 and 7"</string>
    <string name="wlan_tx_tx_gain">TX Gain</string>
    <string name="wlan_tx_sifs">SIFS</string>
    <string name="wlan_tx_macaddress">MAC</string>
    <string name="wlan_danzaibo_start">"Single carrier to send "</string>
    <string name="wlan_danzaibo_stop">"Single carrier stopping"</string>
    <string name="wlan_model">"the model of B/G"</string>
    <string name="wlan_wl_success">"WL operation success"</string>
    <string name="wlan_wl_fail">"WL operation failure"</string>
    <string name="backlight_illustration">"Press the Power key to test cell phone sleep/wake after screen turn dark! "</string>
    <string name="camera_illustration">"Select the result of Camera test，please！"</string>
    <string name="camera_retake">"retake"</string>
    <string name="cameraback_name">CameraBack</string>
    <string name="cameraback_takepicture">Take picture</string>
    <string name="cameraback_fail_open">Camera open Fail, please Check Camera Installed Correctly!</string>
    <string name="autofocus_fail">AutoFocus Failed</string>
    <string name="connect_fail">can not connet to the back camera</string>
    <string name="camerafront_name">CameraFront</string>
    <string name="camerafront_takepicture">Take picture</string>
    <string name="change_loop">"switch"</string>
    <string name="recive_loopback">Receive loopback</string>
    <string name="head_loopback">Head loopback</string>
    <string name="receiver_illustration">"Please align MIC blowing"</string>
    <string name="headset_illustration1">"Please insert headset"</string>
    <string name="headset_illustration2">"Please start the headset loopback test"</string>
    <string name="remove_headset">Please remove headset</string>
    <string name="insert_headset">Please insert headset</string>
    <string name="record_finish">The recorder has finished</string>
    <string name="transmitter_receiver_name">Transmitter and Receiver</string>
    <string name="transmitter_receiver_hint">Transmitter and Receiver</string>
    <string name="transmitter_receiver_recording">Now recording, please say some words to transmitter and click Stop button to stop.</string>
    <string name="transmitter_receiver_recording1">please say some words loudly to second-mic on top of the phone and test whether can hear sound from speaker</string>
    <string name="transmitter_receiver_recording2">please say some words loudly to transmitter on bottom of the phone and test whether can hear sound from receiver</string>
    <string name="transmitter_receiver_recording3">please say some words to microphone on headset and test whether can hear sound from headset</string>
    <string name="transmitter_receiver_playing">Replaying now, please listen to the receiver.</string>
    <string name="transmitter_receiver_confirm">Do you hear the sound?</string>
    <string name="transmitter_receiver_record_first">Please click Record button first</string>
    <string name="transmitter_receiver_replay_end">Have reached the end.</string>
    <string name="transmitter_receiver_to_record">Click Record button to record sound.</string>
    <string name="headset_name">Headset</string>
    <string name="headset_hint">Headset</string>
    <string name="headset_recording">Now recording, please say some words to transmitter and click Stop button to stop.</string>
    <string name="headset_playing">Replaying now, please listen to the receiver.</string>
    <string name="headset_confirm">Do you hear the sound?</string>
    <string name="headset_record_first">Please click Record button first</string>
    <string name="headset_replay_end">Have reached the end，please select test results.</string>
    <string name="headset_to_record">Click Record button to record sound.</string>
    <string name="speaker_recording">>Now being recorded, please speak</string>
    <string name="stop">Stop</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="record">Record</string>
    <string name="fm_illustration">"Select the result of FMradio test，please！"</string>
    <string name="fm_init">Init</string>
    <string name="fm_get_FREQ">Get FREQ</string>
    <string name="fm_change_VOL">Change VOL</string>
    <string name="fm_stereo_mono">Stereo</string>
    <string name="fm_mute">MUTE</string>
    <string name="fm_rssi">Rssi</string>
    <string name="fm_seek">Seek</string>
    <string name="fm_close">Close</string>
    <string name="fm_setfreqtext">Set Freq</string>
    <string name="fm_freqinputtext">Freq Input</string>
    <string name="fm_statetext">State:</string>
    <string name="fm_initmessage">Init OK ,the freq is:</string>
    <string name="fm_Curfreq">Cur freq is:</string>
    <string name="fm_CurVolume">Cur volume is:</string>
    <string name="fm_mono">mono now</string>
    <string name="fm_stereo">Stereo now</string>
    <string name="fm_getnewfreq">Get new freq:</string>
    <string name="fm_nofreq">No new freq</string>
    <string name="fm_closed">Radio Closed</string>
    <string name="fm_freqnow">Freq now is:</string>
    <string name="fm_channel">Please Enter Correct Channel!</string>
    <string name="g_null_text"></string>
    <string name="fm_khz">khz</string>
    <string name="wait">"Please wait ..."</string>
    <string name="fm_name">FmRadio</string>
    <string name="fm_search">Search</string>
    <string name="openFM_fail">Open FM failed</string>
    <string name="voltage">"voltage : "</string>
    <string name="temperature">"temperature : "</string>
    <string name="volage_volt">mV</string>
    <string name="temperature_degree">degree</string>
    <string name="test_temperature_degree">degree</string>
    <string name="charging">"charging"</string>
    <string name="test_volage_volt">mV</string>
    <string name="battery_info_status_full">"The battery power is full already"</string>
    <string name="battery_not_linked">"The battery in a virtual welding condition"</string>
    <string name="battery_tooLarge">"too high"</string>
    <string name="battery_normal">"normal"</string>
    <string name="i2c_state_err">"node State! test Failed!"</string>
    <string name="please_input_charger">"Insert charger please"</string>
    <string name="lcd_illustration">"Press the screen or click back key to switch background,please"</string>
    <string name="touch_illustration">"Press the up volume key to display PASS and FAIL"</string>
    <string name="touch_illustration1">"If the TouchPanel is bad, you can press the back key to exit"</string>
    <string name="touch_illustration2">"Please choose PASS or FAIL"</string>
    <string name="motion_sensor_calibration_illustration">"This test for G-sensor!Let the phone flat on horizontal plane and then click G_Sesor_calibration button,and do not pop up any key entil pop G_sensor_calibration results suggest."</string>
    <string name="str_calibration">"calibration"</string>
    <string name="str_calibration_success">"calibration success"</string>
    <string name="str_calibration_failed">"calibration failure"</string>
    <string name="motionsensor_info">"Motion sensor data："</string>
    <string name="gyro_cali_tips">"This test for GYRO_Sensor!Let the phone flat on horizontal plane and then click GYRO_calibration button,and do not pop up any key entil pop GYRO_calibration results suggest."</string>
    <string name="magneticsensor_info">"Magnetic sensor data:\n"</string>
    <string name="proximitysenor_info">"Proximity sensor data："</string>
    <string name="proximity_calibration_illustration">"Please make sure the clamp installed correctly！Click on the button of the calibration "</string>
    <string name="original_data">"original data："</string>
    <string name="backlight_data">"backlight data："</string>
    <string name="lux_data">"LUX："</string>
    <string name="gps_info">"getting data of GPS："</string>
    <string name="bd_info">"getting data of BeiDou："</string>
    <string name="gps_success">"Locating..."</string>
    <string name="gps_located">Locate success</string>
    <string name="gps_st_info_snr">SNR：</string>
    <string name="gps_st_info_prn">PRN：</string>
    <string name="gps_st_info_azimuth">AZIMUTH：</string>
    <string name="gps_st_info_elevation">ELEVATION：</string>
    <string name="gps_open_error">"An error occurred when open GPS！"</string>
    <string name="del_success">"Delete the data of GPS successful!"</string>
    <string name="del_fail">"Delete the data of GPS failed!"</string>
    <string name="wifisettins_page">"Select the result of WLAN test，please！"</string>
    <string name="wifisettins_24g">"2.4G WiFi :  "</string>
    <string name="wifisettins_5g">"5G WiFi :  "</string>
    <string name="sn_model">MODEL</string>
    <string name="software_title">internal version</string>
    <string name="hardware_title">hardware version</string>
    <string name="hardware_content">Readboy_C3L_HW02</string>
    <string name="baseband_version">baseband version</string>
    <string name="sn_version">sn number</string>
    <string name="software_version">"software version"</string>
    <string name="tp_type">"TP manufacturer info"</string>
    <string name="lcd_type">"LCD manufacturer info"</string>
    <string name="camera_type">"Back Camera manufacturer info"</string>
    <string name="rom_type">"ROM manufacturer info"</string>
    <string name="front_camera_type">"Front Camera manufacturer info"</string>
    <string name="imei">IMEI</string>
</resources>