<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/t1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sn_model"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/t2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/t9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sn_version"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/t10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/t3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/software_title"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/t4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/t5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hardware_title"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/t6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/hardware_content"
                 />

            <TextView
                android:id="@+id/t7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/baseband_version"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/t8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp" />

            <!-- 20130121-modify for add encryption sn test by lvhongshan start -->
            <!--
        <TextView android:id="@+id/t19" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:textSize="18dip"
            android:text="@string/sn_version2" />
        <TextView android:id="@+id/t20" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:textSize="14dip" />
            -->
            <!-- 20130121-modify for add encryption sn test by lvhongshan end -->

            <TextView
                android:id="@+id/t11"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/software_version"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/t12"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp" />

            <!-- modify for read the auto test results to NV2499 by songguangyu 20140218 start -->

            <TextView
                android:id="@+id/t13"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/t14"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/t15"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/t16"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/t17"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/t18"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp" />
            <!-- modify for read the auto test results to NV2499 by songguangyu 20140218 end -->
            <!-- add PA568list item by xiasiping 20140811 start -->

            <TextView
                android:id="@+id/t19"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/imei"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/t20"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/imei"
                android:textSize="30sp" />
            <!-- add PA568list item by xiasiping 20140811 end -->

            <TextView
                android:id="@+id/t21"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/tp_type"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/t22"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lcd_type"
                android:textSize="30sp" />
            <!-- Modify for add front camera information by lizhaobo 20151120 start -->

            <TextView
                android:id="@+id/t23"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/front_camera_type"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/t24"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera_type"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/t25"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/rom_type"
                android:textSize="30sp" />
            <!-- Modify for add front camera information by lizhaobo 20151120 end -->
            <!--
            <TextView android:id="@+id/t22" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:textSize="14dip" />
            -->

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <include
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            layout="@layout/pass_fail" />
    </LinearLayout>

</LinearLayout>
